Best Commit Ever: Resolved flickering over. (it was due to the fact that the table is at the same level of the cards. Raised up all the cards by raising the battlefield of 1 px translateZ: 1px)

--- a/src/main/resources/public/game.css
+++ b/src/main/resources/public/game.css
@@ -182,12 +182,13 @@ body {
 
 #player-battlefield {
   bottom: 10%;
+  transform: translateZ(1px);
 }
 
 #opponent-battlefield {
   position: absolute;
   top: 2%;
-  transform: rotate(180deg);
+  transform: rotate(180deg) translateZ(1px);
 }
 
 .battlefield {
@@ -429,6 +430,6 @@ body {
   height: 80px;
   bottom: -40px;
   z-index: 0;
-  transform: rotateX(-90deg) translateY(40px) translateZ(-1px);
+  transform: rotateX(-90deg) translateY(40px);
   filter: brightness(50%);
 }
